--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
-
+   <li>
+     <a href="/code-studio/welcome-to-code-studio">Welcome to Syncfusion Code Studio</a>
+    </li>
     <li>Getting Started
         <ul>
-            <li>
-                <a href="/code-studio/welcome-to-code-studio">Welcome to Syncfusion Code Studio</a>
-            </li>
+            
             <li>
                 <a href="/code-studio/get-started/product-tour">Product Tour</a>
             </li>
@@ -63,8 +63,7 @@
                     <li>BYOK
                         <ul>
                             <li>
-                                <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and
-                                    Models</a>
+                                <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and Models</a>
                             </li>
                             <li>
                                 <a href="/code-studio/enterprise-server/fallback">Fallback policy configuration</a>
@@ -149,42 +148,31 @@
                     <li>Add more context providers
                         <ul>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/how-to-configure-more-contextproviders">How
-                                    to configure context providers</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/how-to-configure-more-contextproviders">How to configure context providers</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/clipboard">Clipboard</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/clipboard">Clipboard</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/commit">Commit</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/commit">Commit</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/database">Database</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/database">Database</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/debugger">Debugger</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/debugger">Debugger</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/github-issues">Github
-                                    issues</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/github-issues">Github issues</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/openfile">Openfile</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/openfile">Openfile</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/postgresql">PostgreSQL</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/postgresql">PostgreSQL</a>
                             </li>
                             <li>
-                                <a
-                                    href="/code-studio/features/context-providers/add-more-contextproviders/search">Search</a>
+                                <a href="/code-studio/features/context-providers/add-more-contextproviders/search">Search</a>
                             </li>
                             <li>
                                 <a href="/code-studio/features/context-providers/add-more-contextproviders/url">URL</a>
@@ -210,8 +198,7 @@
             <li>MCP
                 <ul>
                     <li><a href="/code-studio/reference/configure-properties/mcp/marketplace">Marketplace</a></li>
-                    <li><a href="/code-studio/reference/configure-properties/mcp/configure-mcp-server">Configuring MCP
-                            Servers via YAML</a></li>
+                    <li><a href="/code-studio/reference/configure-properties/mcp/configure-mcp-server">Configuring MCP Servers via YAML</a></li>
                     <li><a href="/code-studio/reference/configure-properties/mcp/customservers">Custom Servers</a></li>
                 </ul>
             </li>
@@ -221,8 +208,7 @@
             <li><a href="/code-studio/reference/configure-properties/docs">Docs</a></li>
             <li><a href="/code-studio/reference/configure-properties/usersettings">User Settings</a></li>
             <li><a href="/code-studio/reference/configure-properties/toolssupport">Tools</a></li>
-            <li><a href="/code-studio/reference/configure-properties/how-to-add-local-and-BYOK-model">How to Add Local
-                    Models</a></li>
+            <li><a href="/code-studio/reference/configure-properties/how-to-add-local-and-BYOK-model">How to Add Local Models</a></li>
             <li><a href="/code-studio/reference/configure-properties/sfcodeignore">.Sfcodeignore</a></li>
         </ul>
     </li>
@@ -249,20 +235,16 @@
     <li>Troubleshoot
         <ul>
             <li>
-                <a
-                    href="/code-studio/troubleshoot/how-to-remove-cache-folders-of-code-studio-to-resolve-the-app-corruption">How
-                    to remove cache folders of Code Studio to resolve the app corruption</a>
+                <a href="/code-studio/troubleshoot/how-to-remove-cache-folders-of-code-studio-to-resolve-the-app-corruption">How to remove cache folders of Code Studio to resolve the app corruption</a>
             </li>
             <li>
-                <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3
-                    model in OpenAI Integration via OpenRouter</a>
+                <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3 model in OpenAI Integration via OpenRouter</a>
             </li>
             <li>
                 <a href="/code-studio/troubleshoot/resolve-mcp-server-eaccess-issue">How to Resolve EACCESS error</a>
             </li>
             <li>
-                <a href="/code-studio/troubleshoot/resolve-failed-to-parse-assistant">How to Resolve Failed to Parse
-                    Assistant error</a>
+                <a href="/code-studio/troubleshoot/resolve-failed-to-parse-assistant">How to Resolve Failed to Parse Assistant error</a>
             </li>
         </ul>
 
