211976: comprehensive debugging and development setup guides for multiple programming languages to enhance Code Studio's developer experience.

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -164,6 +164,22 @@
         </ul>
     </li>
     <li> <a href="/code-studio/ui-builder">UI Builder</a> </li>
+    <li>Languages
+        <ul>
+            <li>
+                <a href="/code-studio/Languages/ruby-debug-steps">Ruby Development and Debugging Setup Guide</a>
+            </li>
+            <li>
+                <a href="/code-studio/Languages/javascript-debug-steps">JavaScript Development and Debugging Setup Guide</a>
+            </li>
+            <li>
+                <a href="/code-studio/Languages/typescript-debug-steps">TypeScript Development and Debugging Setup Guide</a>
+            </li>
+            <li>
+                <a href="/code-studio/Languages/swift-debug-steps">Swift Development and Debugging Setup Guide</a>
+            </li>
+        </ul>
+    </li>
     <li>
         <a href="/code-studio/reference/configure-the-code-studio">Configure the Syncfusion Code Studio</a>
         <ul>
