EXT-212400 committed debugging steps java, python, c#, php, powershell in source

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -164,6 +164,28 @@
         </ul>
     </li>
     <li> <a href="/code-studio/ui-builder">UI Builder</a> </li>
+        <li>Languages
+        <ul>
+            <li>
+                <a href="/code-studio/languages/csharp-debugging-guide">C Sharp Development and Debugging Setup</a>
+            </li>
+            <li>
+                <a href="/code-studio/languages/java-debugging-guide">Java Development and Debugging Setup</a>
+            </li>
+            <li>
+                <a href="/code-studio/languages/php-debugging-guide">PHP Development and Debugging Setup</a>
+            </li>
+            <li>
+                <a href="/code-studio/languages/powershell-debugging-guide">PowerShell Development and Debugging Setup</a>
+            </li>
+            <li>
+                <a href="/code-studio/languages/python-debugging-guide">Python Development and Debugging Setup</a>
+            </li>
+            <li>
+                <a href="/code-studio/languages/common-debugging-steps">Common Debugging Setups</a>
+            </li>
+        </ul>
+    </li>
     <li>
         <a href="/code-studio/reference/configure-the-code-studio">Configure the Syncfusion Code Studio</a>
         <ul>
