added configure opensource models doc

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -181,6 +181,7 @@
             <li><a href="/code-studio/reference/configure-properties/usersettings">User Settings</a></li>
             <li><a href="/code-studio/reference/configure-properties/toolssupport">Tools</a></li>
              <li><a href="/code-studio/reference/configure-properties/how-to-add-local-and-BYOK-model">How to add local models and BYOK models</a></li>
+             <li><a href="/code-studio/reference/configure-properties/configure-opensource-model">How to Configure Open-source Models in Code Studio</a></li>
             <li><a href="/code-studio/reference/configure-properties/sfcodeignore">.Sfcodeignore</a></li>
         </ul>
     </li>
