openrouter free model docs added

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -32,6 +32,9 @@
                 <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and Models</a>
             </li>
             <li>
+                <a href="/code-studio/enterprise-server/freemodel">Free Models</a>
+            </li>
+            <li>
                 <a href="/code-studio/enterprise-server/fallback">Fallback policy configuration</a>
             </li>
             </ul>
