--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -191,6 +191,9 @@
     <li>Release Notes
         <ul>
             <li>
+                <a href="/code-studio/release-notes/v1.0.3">v1.0.3</a>
+            </li>
+            <li>
                 <a href="/code-studio/release-notes/v1.0.2">v1.0.2</a>
             </li>
             <li>
