Added agent rules document

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -75,6 +75,9 @@
                 <a href="/code-studio/features/memory">Memory</a>
             </li>
             <li>
+                <a href="/code-studio/features/agentrules">Global Agent Rules</a>
+            </li>
+            <li>
                 <a href="/code-studio/features/inline">Inline Edits</a>
             </li>
             <li>
