docs: add tool mentions feature to code studio

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -78,6 +78,9 @@
                 <a href="/code-studio/features/agentrules">Global Agent Rules</a>
             </li>
             <li>
+                <a href="/code-studio/features/mentions">Tool Mentions</a>
+            </li>
+            <li>
                 <a href="/code-studio/features/inline">Inline Edits</a>
             </li>
             <li>
