toc file changes

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -27,8 +27,7 @@
             <li>BYOK
                 <ul>
                     <li>
-                        <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and
-                            Models</a>
+                        <a href="/code-studio/enterprise-server/providersandmodels">Configure LLM Providers and Models</a>
                     </li>
                     <li>
                         <a href="/code-studio/enterprise-server/freemodel">Free Models</a>
