custom server toc changes

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -105,7 +105,7 @@
             <li>MCP
                 <ul>
                     <li><a href="/code-studio/reference/configure-properties/mcp/marketplace">Marketplace</a></li>
-                   
+                   <li><a href="/code-studio/reference/configure-properties/mcp/customservers">Custom Server</a></li>
                 </ul>
             </li>
             <li><a href="/code-studio/reference/configure-properties/custom-instructions">Custom Instructions</a></li>
