--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -122,6 +122,9 @@
     <li>Release Notes
         <ul>
             <li>
+                <a href="/code-studio/release-notes/v2.0.0">v2.0.0</a>
+            </li>
+            <li>
                 <a href="/code-studio/release-notes/v1.0.3">v1.0.3</a>
             </li>
             <li>
