--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -228,7 +228,7 @@
                 <a href="/code-studio/troubleshoot/use-codebase-search">How to use Codebase search in the latest version of CodeStudio</a>
             </li>
             <li>
-                <a href="/code-studio/troubleshoot/resolve-uncaught-exception-error">How to resolve the "Uncaught Exception" error during Code Studio auto update</a>
+                <a href="/code-studio/troubleshoot/resolve-uncaught-exception-error">How to resolve the Uncaught Exception error during Code Studio auto update</a>
             </li>
             
         </ul>
