troubleshoot app corruption changes

--- a/code-studio-toc.html
+++ b/code-studio-toc.html
@@ -200,7 +200,7 @@
     <li>Troubleshoot
         <ul>
             <li>
-                <a href="/code-studio/troubleshoot/how-to-remove-cache-folders-of-code-studio-to-resolve-the-app-corruption">How to remove cache folders of Code Studio to resolve the app corruption</a>
+                <a href="/code-studio/troubleshoot/how-to-resolve-the-app-corruption">How to resolve Code Studio app corruption</a>
             </li>
             <li>
                 <a href="/code-studio/troubleshoot/openai-integration">How to Resolve Error (Status Code 403) for O3 model in OpenAI Integration via OpenRouter</a>
